Correct button-text     Give button action text another name once it collapsed with about sign up button text's color

--- a/style.css
+++ b/style.css
@@ -218,10 +218,10 @@ ul {
     text-align: center;
 }
 
-.button-text {
+.button-text-two {
     color: #F9FAF8;
 }
 
-.button-text:hover {
+.button-text-two:hover {
     color: #3882f6;
 }
